--- a/PocketReader/.settings/org.eclipse.wst.common.component
+++ b/PocketReader/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
         
-    <wb-module deploy-name="PocketReader">
+    <wb-module deploy-name="PocketReader-0.0.1-SNAPSHOT">
                 
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
                 
@@ -9,11 +9,14 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
                 
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-test-sources/test-annotations"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated_tests"/>
                 
         <property name="context-root" value="PocketReader"/>
                 
-        <property name="java-output-path" value="/PocketReader/target/classes"/>
+        <property name="java-output-path" value="/PocketReader NEW INSTANCE/target/classes"/>
             
     </wb-module>
     
